2008-01-02  Stefan Jahn  <stefan@lkcc.org>

	* devices/diac.h (class diac): Added preliminary diac
	implementation.

2007-10-23  Stefan Jahn  <stefan@lkcc.org>

	* ifile.h (class ifile): Added new file based current source.

2007-10-21  Stefan Jahn  <stefan@lkcc.org>

	* vfile.cpp: Implemented new voltage gain (G) and delay time (T)
	properties.

2007-09-25  Stefan Jahn  <stefan@lkcc.org>

	* devices/eqndefined.cpp: Fixed result interpretation for non-real
	valued equation results (i.e. complex when e.g. using sqrt).

2007-09-04  Stefan Jahn  <stefan@lkcc.org>

	* devices/eqndefined.cpp: Reducing number of equation evaluations
	using the new 'skip' feature of the equation solver on the one
	hand and by avoiding running the equation evaluations of the EDD
	twice for a single simulation step.

2007-08-31  Stefan Jahn  <stefan@lkcc.org>

	* devices/eqndefined.cpp: Fixed a bug due to use of several
	subcircuits of the same type including EDDs.  Equation results in
	environment depending on subcircuit parameters passed into the EDD
	equations are now updated correctly.

2007-08-16  Stefan Jahn  <stefan@lkcc.org>

	* vfile.cpp: Allowing both to be used as file formats: native
	qucsdata and CSV.

2007-08-15  Stefan Jahn  <stefan@lkcc.org>

	* vfile.cpp: Some minor code cleanups.

2007-08-13  Stefan Jahn  <stefan@lkcc.org>

	* vfile.h (class vfile): New component: file based voltage source.
	Thanks a lot to Gunther!

2007-06-15  Stefan Jahn  <stefan@lkcc.org>

	* devices/eqndefined.cpp: Fixed a bug leading to wrong values in
	the equations when there are multiple instances of a equation
	defined device.  It only showed up when equations use local
	variables or subcircuit parameters.

2007-05-21  Stefan Jahn  <stefan@lkcc.org>

	* mutualx.cpp: Finally fixed S-parameter calculation.

2007-05-17  Stefan Jahn  <stefan@lkcc.org>

	* mutualx.cpp: Tried to fix the Z-matrix representation.

2007-05-14  Stefan Jahn  <stefan@lkcc.org>
