@@ -1,3 +1,8 @@
+2008-01-15  Stefan Jahn  <stefan@lkcc.org>
+
+	* devices/diac.cpp: Fixed implementation of Diac.  Works now also
+	for transient simulation.
+
 2008-01-02  Stefan Jahn  <stefan@lkcc.org>
 
 	* devices/diac.h (class diac): Added preliminary diac
